<resources>
    <string name="app_name">Chat</string>
    <string name="title_activity_main2">Main2</string>
    <string name="menu_action_setting">Setting</string>
    <string name="menu_action_about_us">About us</string>
    <string name="menu_action_calibrage">Calibrage</string>
    <string name="menu_action_refresh">Refresh</string>
    <string name="menu_action_stop_detection">Stop detection</string>
    <string name="menu_action_restart_motion">Restart motion</string>
    <string name="menu_action_item_opacity">Item opacity</string>
    <string name="menu_action_check_immatriculation">Check Car</string>
    <string name="menu_action_check">Check...</string>
    <string name="sous_menu_action_check_id">Check by Id</string>
    <string name="sous_menu_action_check_name">Check by Lastname</string>
    <string name="sous_menu_action_check_fullname">Check by Fullname</string>
</resources>
